Thu Feb 13 17:53:44 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tao/IIOP_Endpoint.h (TAO_IIOP_Endpoint): 
	* tao/IIOP_Profile.h:
	* tao/Strategies/DIOP_Endpoint.h:
	* tao/Strategies/SHMIOP_Endpoint.h: Cosmetic changes like removing
	  ORB.h  inclusion etc.

Wed Feb 12 18:15:24 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* Merged in changes from the main trunk.

Wed Feb 12 15:40:46 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tao/Tagged_Components.h:
	* tao/Tagged_Components.cpp:
	* tao/Tagged_Components.i (TAO_Tagged_Components): Create
	  IOP::MultipleComponentProfile lazily, instead of creating
	  actively on the stack and increase the runtime footprint. If we
	  do this we only pay when TAO gets something that TAO doesnt
	  understand. This changed forced us to change the signature of
	  the components (). Instead of returning a reference we now
	  return a pointer to the underlying
	  IOP::MultipleComponentProfile. 

Thu Feb  6 17:51:06 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tao/Tagged_Components.cpp: Removed some vague print statements. 
	* tao/Strategies/SHMIOP_Connector.cpp: Fixed some debug
	  statements. 

Thu Feb  6 16:37:32 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tao/Stub.cpp (ior_info_): 
	* tao/Invocation.cpp:
	* tao/ClientRequestInfo_i.cpp: Added error checks to the last
	  checkins. 

Sun Jan 26 23:50:17 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tao/Profile.cpp:
	* tao/Profile.h:
 	* tao/Profile.i: Added a new method create_tagged_profile
	  (). Infact, this method existed in the derived classes returning
	  a reference to the underlying IOP::TaggedProfile. Since the
	  method existed in all the derived classes and was doing similar
	  things it has now been moved to the base class with a slight
	  signature change. This now returns a pointer to the underlying